Fixed dual column section gapping issue, added proper responsiveness

--- a/style.css
+++ b/style.css
@@ -357,7 +357,29 @@ html {
   padding: 10px;
 }
 
+/* Contains columns for img section */
+.img-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 10%;
+  align-content: center;
+  padding: 5px;
+  margin-top: 20px;
+}
+
+/* Applies flex property to each column */
+.img-container div {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+  align-items: center;
+}
+
 .img-column {
+  width: 45%;
+  height: 45vw;
   position: relative;
   flex: 1;
   align-items: center;
@@ -368,7 +390,7 @@ html {
 
 .column-img {
   width: 100%;
-  height: 70%;
+  height: 100%;
   object-fit: cover;
   border: solid black 5px;
   border-radius: 5px;
@@ -383,7 +405,7 @@ html {
   font-weight: 300;
   color: white;
   position: absolute;
-  top: 25%;
+  top: 30%;
   text-shadow: 0px 5px 10px #000;
 }
 
@@ -394,14 +416,14 @@ html {
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
   font-size: 2vw;
-  top: 50%;
+  top: 60%;
 }
 
 .col-overlay {
   position: absolute;
   background-color: rgba(0,0,0,0.5);
   border-radius: 5px;
-  height: 70%;
+  height: 100%;
   width: 100%;
 }
 
@@ -556,7 +578,33 @@ footer {
   }
 }
 
+/* Adjustments for mobile view */
+
 @media only screen and (max-width: 900px) {
+  .section-heading {
+    font-size: 3rem;
+  }
+  
+  .img-container {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .img-column {
+    width: 100%;
+    margin: 10px 0 10px 0;
+  }
+
+  .img-heading {
+    font-size: 8vw;
+  }
+
+  .img-subhead {
+    font-size: 4vw;
+    padding: 10px;
+  }
+
   /* Adjustments for the footer */
   .footer .inner-footer {
     width: 90%;
@@ -575,9 +623,4 @@ footer {
   .footer-col {
     padding-bottom: 12px;
   }
-}
-
-/* Adjustments for mobile view */
-@media only screen and (max-width: 768px) {
-
 }
